--- a/FinalProjectFrontEnd/app/src/main/AndroidManifest.xml
+++ b/FinalProjectFrontEnd/app/src/main/AndroidManifest.xml
@@ -4,19 +4,18 @@
 
     <permission
         android:name="com.example.app.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature"/>
+        android:protectionLevel="signature" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
-    <uses-permission android:name="com.example.app.permission.MAPS_RECEIVE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.example.app.permission.MAPS_RECEIVE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -25,11 +24,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="KEY"/>
-
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <!-- <meta-data -->
+        <!-- android:name="com.google.android.maps.v2.API_KEY" -->
+        <!-- android:value="KEY"/> -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,8 +42,20 @@
         </activity>
         <activity
             android:name=".AddToiletActivity"
-            android:label="@string/title_activity_add_toilet"
-            android:theme="@style/Theme.AppCompat"></activity>
+            android:label="Add a Toilet"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
+            android:name=".DetailActivity"
+            android:label="Toilet Information"></activity>
+        <activity
+            android:name=".ListActivity"
+            android:label="Toilets at USC" />
+        <activity
+            android:name=".CommentActivity"
+            android:label="Leave a Comment" />
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
     </application>
 
 </manifest>
