--- a/FinalProjectFrontEnd/app/build.gradle
+++ b/FinalProjectFrontEnd/app/build.gradle
@@ -10,6 +10,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        resValue "string", "google_maps_key",
+                (project.findProperty("GOOGLE_MAPS_API_KEY") ?: " AIzaSyBzXNOY7ZEWHfbGNGQ3WKbX47-kJ_lYj1o")
+
     }
     buildTypes {
         release {
@@ -27,7 +30,21 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
+    compile "com.google.android.gms:play-services-location:11.0.4"
     compile 'com.android.support:design:26.+'
     compile 'com.google.code.gson:gson:2.6.2'
     testCompile 'junit:junit:4.12'
 }
+
+allprojects {
+    repositories {
+        mavenLocal()
+        jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+    }
+}
+
+
